force-app/main/default/objects/Location__c/fields/AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>AddressLine2__c</fullName>
    <label>Address Line2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>