force-app/main/default/objects/Location__c/fields/Afternoon24hrs__c.field-meta.xml
<CustomField>
    <fullName>Afternoon24hrs__c</fullName>
    <description>Afternoon time range using 24-hour format, e.g. \</description>
    <inlineHelpText>Afternoon time range using 24-hour format, e.g. \</inlineHelpText>
    <label>Afternoon24hrs</label>
    <length>12</length>
    <type>Text</type>
</CustomField>