force-app/main/default/objects/Location__c/fields/AlternateCurrencies__c.field-meta.xml
<CustomField>
    <fullName>AlternateCurrencies__c</fullName>
    <description>Allows price and rate quoting in alternate currencies.</description>
    <inlineHelpText>Allows price and rate quoting in alternate currencies.</inlineHelpText>
    <label>Alternate Currencies</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
                <label>Value 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>