force-app/main/default/objects/Location__c/fields/AlternateDisplayNameDE__c.field-meta.xml
<CustomField>
    <fullName>AlternateDisplayNameDE__c</fullName>
    <description>Display Name in German.</description>
    <inlineHelpText>Display Name in German.</inlineHelpText>
    <label>Alternate Display Name DE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>