force-app/main/default/objects/Location__c/fields/AlternateDisplayNameEL__c.field-meta.xml
<CustomField>
    <fullName>AlternateDisplayNameEL__c</fullName>
    <description>Display Name in Greek.</description>
    <inlineHelpText>Display Name in Greek.</inlineHelpText>
    <label>Alternate Display Name EL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>