force-app/main/default/objects/Location__c/fields/AlternateDisplayNameENUS__c.field-meta.xml
<CustomField>
    <fullName>AlternateDisplayNameENUS__c</fullName>
    <description>Display Name in English.</description>
    <inlineHelpText>Display Name in English.</inlineHelpText>
    <label>Alternate Display Name ENUS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>