force-app/main/default/objects/Location__c/fields/AlternateDisplayNameES__c.field-meta.xml
<CustomField>
    <fullName>AlternateDisplayNameES__c</fullName>
    <description>Display Name in Spanish.</description>
    <inlineHelpText>Display Name in Spanish.</inlineHelpText>
    <label>Alternate Display Name ES</label>
    <length>255</length>
    <type>Text</type>
</CustomField>