force-app/main/default/objects/Location__c/fields/AlternateDisplayNameFR__c.field-meta.xml
<CustomField>
    <fullName>AlternateDisplayNameFR__c</fullName>
    <description>Display Name French.</description>
    <inlineHelpText>Display Name French.</inlineHelpText>
    <label>Alternate Display Name FR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>