force-app/main/default/objects/Location__c/fields/AlternateDisplayNameHU__c.field-meta.xml
<CustomField>
    <fullName>AlternateDisplayNameHU__c</fullName>
    <description>Display Name in Hungarian.</description>
    <inlineHelpText>Display Name in Hungarian.</inlineHelpText>
    <label>Alternate Display Name HU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>