force-app/main/default/objects/Location__c/fields/AlternateDisplayNameIT__c.field-meta.xml
<CustomField>
    <fullName>AlternateDisplayNameIT__c</fullName>
    <description>Display Name in Italian.</description>
    <inlineHelpText>Display Name in Italian.</inlineHelpText>
    <label>Alternate Display Name IT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>