force-app/main/default/objects/Location__c/fields/AlternateDisplayNameJA__c.field-meta.xml
<CustomField>
    <fullName>AlternateDisplayNameJA__c</fullName>
    <description>Display Name in Japanese.</description>
    <inlineHelpText>Display Name in Japanese.</inlineHelpText>
    <label>Alternate Display Name JA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>