force-app/main/default/objects/Location__c/fields/AlternateDisplayNameNLNL__c.field-meta.xml
<CustomField>
    <fullName>AlternateDisplayNameNLNL__c</fullName>
    <description>Display Name in Dutch.</description>
    <inlineHelpText>Display Name in Dutch.</inlineHelpText>
    <label>Alternate Display Name NLNL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>