force-app/main/default/objects/Location__c/fields/AlternateDisplayNamePL__c.field-meta.xml
<CustomField>
    <fullName>AlternateDisplayNamePL__c</fullName>
    <description>Display Name in Polish.</description>
    <inlineHelpText>Display Name in Polish.</inlineHelpText>
    <label>Alternate Display Name PL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>