force-app/main/default/objects/Location__c/fields/AlternateDisplayNamePTBR__c.field-meta.xml
<CustomField>
    <fullName>AlternateDisplayNamePTBR__c</fullName>
    <description>Display Name in Portuguese (Brazil).</description>
    <inlineHelpText>Display Name in Portuguese (Brazil).</inlineHelpText>
    <label>Alternate Display Name PTBR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>