force-app/main/default/objects/Location__c/fields/AlternateDisplayNamePTPT__c.field-meta.xml
<CustomField>
    <fullName>AlternateDisplayNamePTPT__c</fullName>
    <description>Display Name in Portuguese (Portugal).</description>
    <inlineHelpText>Display Name in Portuguese (Portugal).</inlineHelpText>
    <label>Alternate Display Name PTPT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>