force-app/main/default/objects/Location__c/fields/AlternateDisplayNameRU__c.field-meta.xml
<CustomField>
    <fullName>AlternateDisplayNameRU__c</fullName>
    <description>Display Name in Russian.</description>
    <inlineHelpText>Display Name in Russian.</inlineHelpText>
    <label>Alternate Display Name RU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>