force-app/main/default/objects/Location__c/fields/AlternateDisplayNameTR__c.field-meta.xml
<CustomField>
    <fullName>AlternateDisplayNameTR__c</fullName>
    <description>Display Name in Turkish.</description>
    <inlineHelpText>Display Name in Turkish.</inlineHelpText>
    <label>Alternate Display Name TR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>