force-app/main/default/objects/Location__c/fields/AlternateDisplayNameZHCN__c.field-meta.xml
<CustomField>
    <fullName>AlternateDisplayNameZHCN__c</fullName>
    <description>Display Name in Chinese (Simplified).</description>
    <inlineHelpText>Display Name in Chinese (Simplified).</inlineHelpText>
    <label>Alternate Display Name ZHCN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>