force-app/main/default/objects/Location__c/fields/AlternateDisplayNameZHTW__c.field-meta.xml
<CustomField>
    <fullName>AlternateDisplayNameZHTW__c</fullName>
    <description>Display Name in Chinese (Traditional).</description>
    <inlineHelpText>Display Name in Chinese (Traditional).</inlineHelpText>
    <label>Alternate Display Name ZHTW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>