force-app/main/default/objects/Location__c/fields/AlternateLongDescriptionDE__c.field-meta.xml
<CustomField>
    <fullName>AlternateLongDescriptionDE__c</fullName>
    <description>Long Description in German.</description>
    <inlineHelpText>Long Description in German.</inlineHelpText>
    <label>Alternate Long Description DE</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>