force-app/main/default/objects/Location__c/fields/AlternateLongDescriptionEL__c.field-meta.xml
<CustomField>
    <fullName>AlternateLongDescriptionEL__c</fullName>
    <description>Long Description in Greek.</description>
    <inlineHelpText>Long Description in Greek.</inlineHelpText>
    <label>Alternate Long Description EL</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>