force-app/main/default/objects/Location__c/fields/AlternateLongDescriptionENUS__c.field-meta.xml
<CustomField>
    <fullName>AlternateLongDescriptionENUS__c</fullName>
    <description>Long Description in English.</description>
    <inlineHelpText>Long Description in English.</inlineHelpText>
    <label>Alternate Long Description ENUS</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>