force-app/main/default/objects/Location__c/fields/AlternateLongDescriptionES__c.field-meta.xml
<CustomField>
    <fullName>AlternateLongDescriptionES__c</fullName>
    <description>Long Description in Spanish.</description>
    <inlineHelpText>Long Description in Spanish.</inlineHelpText>
    <label>Alternate Long Description ES</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>