force-app/main/default/objects/Location__c/fields/AlternateLongDescriptionFR__c.field-meta.xml
<CustomField>
    <fullName>AlternateLongDescriptionFR__c</fullName>
    <description>Long Description in French.</description>
    <inlineHelpText>Long Description in French.</inlineHelpText>
    <label>Alternate Long Description FR</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>