force-app/main/default/objects/Location__c/fields/AlternateLongDescriptionHU__c.field-meta.xml
<CustomField>
    <fullName>AlternateLongDescriptionHU__c</fullName>
    <description>Long Description in Hungarian.</description>
    <inlineHelpText>Long Description in Hungarian.</inlineHelpText>
    <label>Alternate Long Description HU</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>