force-app/main/default/objects/Location__c/fields/AlternateLongDescriptionIT__c.field-meta.xml
<CustomField>
    <fullName>AlternateLongDescriptionIT__c</fullName>
    <description>Long Description in Italian.</description>
    <inlineHelpText>Long Description in Italian.</inlineHelpText>
    <label>Alternate Long Description IT</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>