force-app/main/default/objects/Location__c/fields/AlternateLongDescriptionJA__c.field-meta.xml
<CustomField>
    <fullName>AlternateLongDescriptionJA__c</fullName>
    <description>Long Description in Japanese.</description>
    <inlineHelpText>Long Description in Japanese.</inlineHelpText>
    <label>Alternate Long Description JA</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>