force-app/main/default/objects/Location__c/fields/AlternateLongDescriptionNLNL__c.field-meta.xml
<CustomField>
    <fullName>AlternateLongDescriptionNLNL__c</fullName>
    <description>Long Description in Dutch.</description>
    <inlineHelpText>Long Description in Dutch.</inlineHelpText>
    <label>Alternate Long Description NLNL</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>