force-app/main/default/objects/Location__c/fields/AlternateLongDescriptionPL__c.field-meta.xml
<CustomField>
    <fullName>AlternateLongDescriptionPL__c</fullName>
    <description>Long Description in Polish.</description>
    <inlineHelpText>Long Description in Polish.</inlineHelpText>
    <label>Alternate Long Description PL</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>