force-app/main/default/objects/Location__c/fields/AlternateLongDescriptionPTBR__c.field-meta.xml
<CustomField>
    <fullName>AlternateLongDescriptionPTBR__c</fullName>
    <description>Long Description in Portuguese (Brazil).</description>
    <inlineHelpText>Long Description in Portuguese (Brazil).</inlineHelpText>
    <label>Alternate Long Description PTBR</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>