force-app/main/default/objects/Location__c/fields/AlternateLongDescriptionPTPT__c.field-meta.xml
<CustomField>
    <fullName>AlternateLongDescriptionPTPT__c</fullName>
    <description>Long Description in Portuguese (Portugal).</description>
    <inlineHelpText>Long Description in Portuguese (Portugal).</inlineHelpText>
    <label>Alternate Long Description PTPT</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>