force-app/main/default/objects/Location__c/fields/AlternateLongDescriptionRU__c.field-meta.xml
<CustomField>
    <fullName>AlternateLongDescriptionRU__c</fullName>
    <description>Long Description in Russian.</description>
    <inlineHelpText>Long Description in Russian.</inlineHelpText>
    <label>Alternate Long Description RU</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>