force-app/main/default/objects/Location__c/fields/AlternateLongDescriptionTR__c.field-meta.xml
<CustomField>
    <fullName>AlternateLongDescriptionTR__c</fullName>
    <description>Long Description in Turkish.</description>
    <inlineHelpText>Long Description in Turkish.</inlineHelpText>
    <label>Alternate Long Description TR</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>