force-app/main/default/objects/Location__c/fields/AlternateLongDescriptionZHCN__c.field-meta.xml
<CustomField>
    <fullName>AlternateLongDescriptionZHCN__c</fullName>
    <description>Long Description in Chinese (Simplified).</description>
    <inlineHelpText>Long Description in Chinese (Simplified).</inlineHelpText>
    <label>Alternate Long Description ZHCN</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>