force-app/main/default/objects/Location__c/fields/AlternateLongDescriptionZHTW__c.field-meta.xml
<CustomField>
    <fullName>AlternateLongDescriptionZHTW__c</fullName>
    <description>Long Description in Chinese (Traditional).</description>
    <inlineHelpText>Long Description in Chinese (Traditional).</inlineHelpText>
    <label>Alternate Long Description ZHTW</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>