force-app/main/default/objects/Location__c/fields/AlternateNameDE__c.field-meta.xml
<CustomField>
    <fullName>AlternateNameDE__c</fullName>
    <description>Property in German.</description>
    <inlineHelpText>Property in German.</inlineHelpText>
    <label>Alternate Name DE</label>
    <length>80</length>
    <type>Text</type>
</CustomField>