force-app/main/default/objects/Location__c/fields/AlternateNameEL__c.field-meta.xml
<CustomField>
    <fullName>AlternateNameEL__c</fullName>
    <description>Property in Greek.</description>
    <inlineHelpText>Property in Greek.</inlineHelpText>
    <label>Alternate Name EL</label>
    <length>80</length>
    <type>Text</type>
</CustomField>