force-app/main/default/objects/Location__c/fields/AlternateNameES__c.field-meta.xml
<CustomField>
    <fullName>AlternateNameES__c</fullName>
    <description>Property in Spanish.</description>
    <inlineHelpText>Property in Spanish.</inlineHelpText>
    <label>Alternate Name ES</label>
    <length>80</length>
    <type>Text</type>
</CustomField>