force-app/main/default/objects/Location__c/fields/AlternateNameFR__c.field-meta.xml
<CustomField>
    <fullName>AlternateNameFR__c</fullName>
    <description>Property in French.</description>
    <inlineHelpText>Property in French.</inlineHelpText>
    <label>Alternate Name FR</label>
    <length>80</length>
    <type>Text</type>
</CustomField>