force-app/main/default/objects/Location__c/fields/AlternateNameHU__c.field-meta.xml
<CustomField>
    <fullName>AlternateNameHU__c</fullName>
    <description>Property in Hungarian.</description>
    <inlineHelpText>Property in Hungarian.</inlineHelpText>
    <label>Alternate Name HU</label>
    <length>80</length>
    <type>Text</type>
</CustomField>