force-app/main/default/objects/Location__c/fields/AlternateNameJA__c.field-meta.xml
<CustomField>
    <fullName>AlternateNameJA__c</fullName>
    <description>Property in Japanese.</description>
    <inlineHelpText>Property in Japanese.</inlineHelpText>
    <label>Alternate Name JA</label>
    <length>80</length>
    <type>Text</type>
</CustomField>