force-app/main/default/objects/Location__c/fields/AlternateNameNLNL__c.field-meta.xml
<CustomField>
    <fullName>AlternateNameNLNL__c</fullName>
    <description>Property in Dutch.</description>
    <inlineHelpText>Property in Dutch.</inlineHelpText>
    <label>Alternate Name NLNL</label>
    <length>80</length>
    <type>Text</type>
</CustomField>