force-app/main/default/objects/Location__c/fields/AlternateNamePL__c.field-meta.xml
<CustomField>
    <fullName>AlternateNamePL__c</fullName>
    <description>Property in Polish.</description>
    <inlineHelpText>Property in Polish.</inlineHelpText>
    <label>Alternate Name PL</label>
    <length>80</length>
    <type>Text</type>
</CustomField>