force-app/main/default/objects/Location__c/fields/AlternateNamePTBR__c.field-meta.xml
<CustomField>
    <fullName>AlternateNamePTBR__c</fullName>
    <description>Property in Portuguese (Brazil).</description>
    <inlineHelpText>Property in Portuguese (Brazil).</inlineHelpText>
    <label>Alternate Name PTBR</label>
    <length>80</length>
    <type>Text</type>
</CustomField>