force-app/main/default/objects/Location__c/fields/AlternateNamePTPT__c.field-meta.xml
<CustomField>
    <fullName>AlternateNamePTPT__c</fullName>
    <description>Property in Portuguese (Portugal).</description>
    <inlineHelpText>Property in Portuguese (Portugal).</inlineHelpText>
    <label>Alternate Name PTPT</label>
    <length>80</length>
    <type>Text</type>
</CustomField>