force-app/main/default/objects/Location__c/fields/AlternateNameRU__c.field-meta.xml
<CustomField>
    <fullName>AlternateNameRU__c</fullName>
    <description>Property in Russian.</description>
    <inlineHelpText>Property in Russian.</inlineHelpText>
    <label>Alternate Name RU</label>
    <length>80</length>
    <type>Text</type>
</CustomField>