force-app/main/default/objects/Location__c/fields/AlternateNameTR__c.field-meta.xml
<CustomField>
    <fullName>AlternateNameTR__c</fullName>
    <description>Property in Turkish.</description>
    <inlineHelpText>Property in Turkish.</inlineHelpText>
    <label>Alternate Name TR</label>
    <length>80</length>
    <type>Text</type>
</CustomField>