force-app/main/default/objects/Location__c/fields/AlternateNameZHCN__c.field-meta.xml
<CustomField>
    <fullName>AlternateNameZHCN__c</fullName>
    <description>Property in Chinese (Simplified).</description>
    <inlineHelpText>Property in Chinese (Simplified).</inlineHelpText>
    <label>Alternate Name ZHCN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>