force-app/main/default/objects/Location__c/fields/AutotracesConfiguration__c.field-meta.xml
<CustomField>
    <fullName>AutotracesConfiguration__c</fullName>
    <description>System Field: Do Not Use. JSON with settings for automated business reminders.</description>
    <inlineHelpText>System Field: Do Not Use. JSON with settings for automated business reminders.</inlineHelpText>
    <label>Autotraces Configuration</label>
    <length>16384</length>
    <type>LongTextArea</type>
</CustomField>