force-app/main/default/objects/Location__c/fields/BanquetLicenses__c.field-meta.xml
<CustomField>
    <fullName>BanquetLicenses__c</fullName>
    <description>Number of Banquet Licenses</description>
    <inlineHelpText>Number of Banquet Licenses</inlineHelpText>
    <label>Banquet Licenses</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>