force-app/main/default/objects/Location__c/fields/BanquetLicensesInUse__c.field-meta.xml
<CustomField>
    <fullName>BanquetLicensesInUse__c</fullName>
    <description>Number of Banquet Licenses in use on this property.</description>
    <inlineHelpText>Number of Banquet Licenses in use on this property.</inlineHelpText>
    <label>Banquet Licenses In Use</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>