force-app/main/default/objects/Location__c/fields/BrandCodeName__c.field-meta.xml
<CustomField>
    <fullName>BrandCodeName__c</fullName>
    <description>The code for the hotel as assigned by the brand.</description>
    <inlineHelpText>The code for the hotel as assigned by the brand.</inlineHelpText>
    <label>Brand Code Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
                <label>Value 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>