force-app/main/default/objects/Location__c/fields/ConflictCheckProspects__c.field-meta.xml
<CustomField>
    <fullName>ConflictCheckProspects__c</fullName>
    <description>This flag determines if conflict checking should be enabled for events with the Status of &apos;Prospect&apos;.</description>
    <inlineHelpText>This flag determines if conflict checking should be enabled for events with the Status of &apos;Prospect&apos;.</inlineHelpText>
    <label>Conflict Check Prospects</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>