force-app/main/default/objects/Location__c/fields/ConsolidateOptionEventNotifications__c.field-meta.xml
<CustomField>
    <fullName>ConsolidateOptionEventNotifications__c</fullName>
    <description>If this is checked, one activity for all events on a booking will be created. If unchecked, one activity per event will be created..</description>
    <inlineHelpText>If this is checked, one activity for all events on a booking will be created. If unchecked, one activity per event will be created..</inlineHelpText>
    <label>Consolidate Option Event Notifications</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>