force-app/main/default/objects/Location__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>System Field: Do Not Use.</description>
    <inlineHelpText>System Field: Do Not Use.</inlineHelpText>
    <label>Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>