force-app/main/default/objects/Location__c/fields/CreateActivitiesforMBRFPNotification__c.field-meta.xml
<CustomField>
    <fullName>CreateActivitiesforMBRFPNotification__c</fullName>
    <label>Create Activitiesfor MBRFPNotification</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>