force-app/main/default/objects/Location__c/fields/CreateOptionsOnConflict__c.field-meta.xml
<CustomField>
    <fullName>CreateOptionsOnConflict__c</fullName>
    <description>This flag determines if an event&apos;s function room option will be set upon conflict.</description>
    <inlineHelpText>This flag determines if an event&apos;s function room option will be set upon conflict.</inlineHelpText>
    <label>Create Options On Conflict</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>