force-app/main/default/objects/Location__c/fields/DaysAfterDeparture__c.field-meta.xml
<CustomField>
    <fullName>DaysAfterDeparture__c</fullName>
    <description>The number of days after the departure date where a room block will be marked pickup complete by the scheduled job, mark pickup complete, that runs once a day.</description>
    <inlineHelpText>The number of days after the departure date where a room block will be marked pickup complete by the scheduled job, mark pickup complete, that runs once a day.</inlineHelpText>
    <label>Days After Departure</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>