force-app/main/default/objects/Location__c/fields/DefaultAlternateLanguageCode__c.field-meta.xml
<CustomField>
    <fullName>DefaultAlternateLanguageCode__c</fullName>
    <description>Default alternate language code for records for this property.</description>
    <inlineHelpText>Default alternate language code for records for this property.</inlineHelpText>
    <label>Default Alternate Language Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
                <label>Value 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>