force-app/main/default/objects/Location__c/fields/DefaultBeoDistributionDays__c.field-meta.xml
<CustomField>
    <fullName>DefaultBeoDistributionDays__c</fullName>
    <label>Default Beo Distribution Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>