force-app/main/default/objects/Location__c/fields/DefaultBeoDistributionStartDays__c.field-meta.xml
<CustomField>
    <fullName>DefaultBeoDistributionStartDays__c</fullName>
    <label>Default Beo Distribution Start Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>