force-app/main/default/objects/Location__c/fields/DefaultBookingCutoffDays__c.field-meta.xml
<CustomField>
    <fullName>DefaultBookingCutoffDays__c</fullName>
    <label>Default Booking Cutoff Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>