force-app/main/default/objects/Location__c/fields/DefaultBookingDecisionDays__c.field-meta.xml
<CustomField>
    <fullName>DefaultBookingDecisionDays__c</fullName>
    <label>Default Booking Decision Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>