force-app/main/default/objects/Location__c/fields/DefaultCurrency__c.field-meta.xml
<CustomField>
    <fullName>DefaultCurrency__c</fullName>
    <description>System Field: Do Not Use.</description>
    <inlineHelpText>System Field: Do Not Use.</inlineHelpText>
    <label>Default Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
                <label>Value 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>