force-app/main/default/objects/Location__c/fields/DefaultIsInclusive__c.field-meta.xml
<CustomField>
    <fullName>DefaultIsInclusive__c</fullName>
    <description>Specifies whether Inclusive Prices are set by default for this property.</description>
    <inlineHelpText>Specifies whether Inclusive Prices are set by default for this property.</inlineHelpText>
    <label>Default Is Inclusive</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>