force-app/main/default/objects/Location__c/fields/DefaultLeadCoordinator__c.field-meta.xml
<CustomField>
    <fullName>DefaultLeadCoordinator__c</fullName>
    <description>The user to whom inquiries or leads are assigned if there are no other assignment rules in effect.</description>
    <inlineHelpText>The user to whom inquiries or leads are assigned if there are no other assignment rules in effect.</inlineHelpText>
    <label>Default Lead Coordinator</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Related Records</relationshipLabel>
    <relationshipName>DefaultLeadCoordinator</relationshipName>
    <type>Lookup</type>
</CustomField>