force-app/main/default/objects/Location__c/fields/DefaultRoomBlockApplyAddlTaxes__c.field-meta.xml
<CustomField>
    <fullName>DefaultRoomBlockApplyAddlTaxes__c</fullName>
    <description>Sets the default when creating room blocks.</description>
    <inlineHelpText>Sets the default when creating room blocks.</inlineHelpText>
    <label>Default Room Block Apply Addl Taxes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
                <label>Value 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>