force-app/main/default/objects/Location__c/fields/DirectBookSalesManager__c.field-meta.xml
<CustomField>
    <fullName>DirectBookSalesManager__c</fullName>
    <description>DirectBook Sales Manager</description>
    <inlineHelpText>DirectBook Sales Manager</inlineHelpText>
    <label>Direct Book Sales Manager</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Related Records</relationshipLabel>
    <relationshipName>DirectBookSalesManager</relationshipName>
    <type>Lookup</type>
</CustomField>