force-app/main/default/objects/Location__c/fields/DisableBookingDaySnapshot__c.field-meta.xml
<CustomField>
    <fullName>DisableBookingDaySnapshot__c</fullName>
    <description>When checked, Booking Day Snapshot data will not be generated for Bookings associated with this Property.</description>
    <inlineHelpText>When checked, Booking Day Snapshot data will not be generated for Bookings associated with this Property.</inlineHelpText>
    <label>Disable Booking Day Snapshot</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>