force-app/main/default/objects/Location__c/fields/DistanceToNearestAirport__c.field-meta.xml
<CustomField>
    <fullName>DistanceToNearestAirport__c</fullName>
    <description>Distance to nearest airport in miles (if SystemOfMeasurement is Standard) or kilometers (if SystemOfMeasurement is Metric).</description>
    <inlineHelpText>Distance to nearest airport in miles (if SystemOfMeasurement is Standard) or kilometers (if SystemOfMeasurement is Metric).</inlineHelpText>
    <label>Distance To Nearest Airport</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>