force-app/main/default/objects/Location__c/fields/DocMerge10__c.field-meta.xml
<CustomField>
    <fullName>DocMerge10__c</fullName>
    <description>Free form section 10 that can be merged into location documents.</description>
    <inlineHelpText>Free form section 10 that can be merged into location documents.</inlineHelpText>
    <label>Doc Merge10</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>