force-app/main/default/objects/Location__c/fields/DocMerge11__c.field-meta.xml
<CustomField>
    <fullName>DocMerge11__c</fullName>
    <description>Free form section 11 that can be merged into location documents.</description>
    <inlineHelpText>Free form section 11 that can be merged into location documents.</inlineHelpText>
    <label>Doc Merge11</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>