force-app/main/default/objects/Location__c/fields/DocMerge12__c.field-meta.xml
<CustomField>
    <fullName>DocMerge12__c</fullName>
    <description>Free form section 12 that can be merged into location documents.</description>
    <inlineHelpText>Free form section 12 that can be merged into location documents.</inlineHelpText>
    <label>Doc Merge12</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>